modified:   index.html     Added section labels

--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
+<!DOCTYPE html>
 <html>
-  
+<head>
+
+</head>
+<body>
+<!--Home Section-->
+<!--End Home Section-->
+
+<!--About Section-->
+<!--End About Section-->
+
+<!--Portfolio Section-->
+<!--End Portfolio Section-->
+
+<!--Contact Section-->
+<!--End Contact Section-->
+</body>
 </html>
